Add extra configuration files under /etc/postgresql/conf.d

--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -8,7 +8,9 @@
 {{ fail "Must increase the max number of connections for the PostgreSQL backend!" }}
 {{ end -}}
 
+# manifests
 ---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
