--- a/templates/configmap.yml
+++ b/templates/configmap.yml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-config
+  name: {{ .Release.Name }}-config-generated
 data:
   postgresql.conf: |+
     {{- .Files.Get "files/config/postgresql.conf" | nindent 4 }}
