--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -3,6 +3,8 @@
 {{- $postgresServiceName := (include "postgresql-cluster.postgres.serviceName" .) -}}
 {{- $masterHost := printf "%s-master-0.%s" .Release.Name $postgresServiceName -}}
 
+{{- $numOfReplicas := (eq .Values.pgpool.loadBalance "sync" | ternary (int .Values.postgres.replicasToSync) (int .Values.postgres.replicas)) -}}
+
 {{/* Check that: poolSize * numProcs <= maxNumConnections - (numOfReservedConnections = 4) */}}
 {{- if gt (mul .Values.pgpool.numProcs .Values.pgpool.poolSize) (sub .Values.postgres.maxNumConnections 4) -}}
 {{ fail "Must increase the max number of connections for the PostgreSQL backend!" }}
@@ -25,7 +27,8 @@ spec:
   template:
     metadata:
       annotations:
-        {{- toYaml .Values.podAnnotations | nindent 8 }}
+        {{- if .Values.podAnnotations }}{{ toYaml .Values.podAnnotations | nindent 8 }}{{- end }}
+        {{- if .Values.pgpool.podAnnotations }}{{ toYaml .Values.pgpool.podAnnotations | nindent 8 }}{{- end }}
       labels:
         {{- include "postgresql-cluster.selectorLabelsForPgpool" . | nindent 8 }}
     spec:
@@ -69,7 +72,7 @@ spec:
         - --timeout
         - '60'
         - {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceName }}
-        {{- range $i := (until (int .Values.postgres.replicas)) }}
+        {{- range $i := (until $numOfReplicas) }}
         - {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceName }}
         {{- end }}{{/* range */}}
         volumeMounts:
@@ -108,7 +111,7 @@ spec:
         - name: BACKEND_0_NAME
           value: server0
         {{- if .Values.pgpool.loadBalance }}
-        {{- range $i := (until (eq .Values.pgpool.loadBalance "sync" | ternary (int .Values.postgres.replicasToSync) (int .Values.postgres.replicas))) }}
+        {{- range $i := (until $numOfReplicas) }}
         - name: {{ printf "BACKEND_%d_HOST" ($i| add1) }}
           value: {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceName }}
         - name: {{ printf "BACKEND_%d_WEIGHT" ($i| add1) }}
@@ -135,12 +138,14 @@ spec:
           readOnly: true
         ports:
         - containerPort: 5433
+        {{- if .Values.pgpool.readinessProbe.enabled }}
         readinessProbe:
           exec:
             command:
             - /opt/check-status-of-primary-node.sh
           initialDelaySeconds: {{ .Values.pgpool.readinessProbe.initialDelaySeconds | default 3 }}
           periodSeconds: {{  .Values.pgpool.readinessProbe.periodSeconds | default 30 }}
+        {{- end }}{{/* if .Values.pgpool.readinessProbe.enabled */}}
         terminationMessagePolicy: FallbackToLogsOnError 
         resources:
           {{- toYaml .Values.pgpool.resources | nindent 10 }}
