--- a/templates/statefulset.yml
+++ b/templates/statefulset.yml
@@ -15,6 +15,8 @@
 {{- $readinessProbeCommand := list "su-exec" "postgres" "pg_isready" "-h" "localhost" -}}
 {{- $masterHost := printf "%s-master-0.%s" .Release.Name (include "postgresql-cluster.postgres.serviceName" .) -}}
 
+{{- $configMap := (include (print $.Template.BasePath "/configmaps/config.yml") . | fromYaml) -}}
+
 # manifests
 ---
 
@@ -52,7 +54,9 @@ spec:
   template:
     metadata:
       annotations:
-        {{- toYaml .Values.podAnnotations | nindent 8 }}
+        checksum/config: {{ cat (get $configMap.data "postgresql.conf") "\n\n" (get $configMap.data "pg_hba.conf") "\n\n" (get $configMap.data "replication-for-master.conf") | sha256sum }}
+        {{- if .Values.podAnnotations }}{{ toYaml .Values.podAnnotations | nindent 8 }}{{- end }}
+        {{- if .Values.postgres.podAnnotations }}{{ toYaml .Values.postgres.podAnnotations | nindent 8 }}{{- end }}
       labels:
         {{- include "postgresql-cluster.selectorLabelsForMaster" . | nindent 8 }}
     spec:
@@ -227,7 +231,9 @@ spec:
   template:
     metadata:
       annotations:
-        {{- toYaml .Values.podAnnotations | nindent 8 }}
+        checksum/config: {{ cat (get $configMap.data "postgresql.conf") "\n\n" (get $configMap.data "pg_hba.conf") "\n\n" (get $configMap.data "replication-for-standby.conf") | sha256sum }}
+        {{- if .Values.podAnnotations }}{{ toYaml .Values.podAnnotations | nindent 8 }}{{- end }}
+        {{- if .Values.postgres.podAnnotations }}{{ toYaml .Values.postgres.podAnnotations | nindent 8 }}{{- end }}
       labels:
         {{- include "postgresql-cluster.selectorLabelsForStandby" . | nindent 8 }}
     spec:
