--- a/pgpool/pgpool.conf.template
+++ b/pgpool/pgpool.conf.template
@@ -478,10 +478,10 @@ follow_primary_command = ''
 # HEALTH CHECK GLOBAL PARAMETERS
 #------------------------------------------------------------------------------
 
-health_check_period = 60
+health_check_period = ${HEALTH_CHECK_PERIOD}
                                    # Health check period
                                    # Disabled (0) by default
-health_check_timeout = 20
+health_check_timeout = 30
                                    # Health check timeout
                                    # 0 means no timeout
 health_check_user = '${MONITOR_USER}'
@@ -493,9 +493,9 @@ health_check_password = '${MONITOR_PASSWORD}'
 
 health_check_database = ''
                                    # Database name for health check. If '', tries 'postgres' frist, 
-health_check_max_retries = 0
+health_check_max_retries = ${HEALTH_CHECK_MAX_RETRIES}
                                    # Maximum number of times to retry a failed health check before giving up.
-health_check_retry_delay = 1
+health_check_retry_delay = ${HEALTH_CHECK_RETRY_DELAY}
                                    # Amount of time to wait (in seconds) between retries.
 connect_timeout = 10000
                                    # Timeout value in milliseconds before giving up to connect to backend.
