--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -1,7 +1,8 @@
 # vim: set filetype=helm: 
 
 {{- $postgresServiceName := (include "postgresql-cluster.postgres.serviceName" .) -}}
-{{- $masterHost := printf "%s-master-0.%s" .Release.Name $postgresServiceName -}}
+{{- $postgresServiceDomain := (include "postgresql-cluster.postgres.serviceDomain" .) -}}
+{{- $masterHost := printf "%s-master-0.%s" .Release.Name $postgresServiceDomain -}}
 
 {{- $numOfReplicas := (eq .Values.pgpool.loadBalance "sync" | ternary (int .Values.postgres.replicasToSync) (int .Values.postgres.replicas)) -}}
 
@@ -13,6 +14,7 @@
 # manifests
 ---
 
+{{- if .Values.pgpool.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -71,9 +73,9 @@ spec:
         - /opt/wait-for-host.sh
         - --timeout
         - '60'
-        - {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceName }}
+        - {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceDomain }}
         {{- range $i := (until $numOfReplicas) }}
-        - {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceName }}
+        - {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceDomain }}
         {{- end }}{{/* range */}}
         volumeMounts:
         - name: scripts
@@ -105,7 +107,7 @@ spec:
         - name: LOAD_BALANCE
           value: '{{ .Values.pgpool.loadBalance | empty | ternary "off" "on" }}'
         - name: BACKEND_0_HOST
-          value: {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceName }}
+          value: {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceDomain }}
         - name: BACKEND_0_WEIGHT
           value: '1'
         - name: BACKEND_0_NAME
@@ -113,7 +115,7 @@ spec:
         {{- if .Values.pgpool.loadBalance }}
         {{- range $i := (until $numOfReplicas) }}
         - name: {{ printf "BACKEND_%d_HOST" ($i| add1) }}
-          value: {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceName }}
+          value: {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceDomain }}
         - name: {{ printf "BACKEND_%d_WEIGHT" ($i| add1) }}
           value: '1'
         - name: {{ printf "BACKEND_%d_NAME" ($i| add1) }}
@@ -153,4 +155,5 @@ spec:
         {{- toYaml .Values.nodeSelector | nindent 8 }}
       affinity:
         {{- toYaml .Values.affinity | nindent 8 }}
-
+        
+{{- end }}{{/* if .Values.pgpool.enabled */}}
