--- a/templates/configmaps/scripts.yml
+++ b/templates/configmaps/scripts.yml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-scripts
+  name: {{ include "postgresql-cluster.fullname" . }}-scripts
 data:
   {{- (.Files.Glob "files/scripts/*.sh").AsConfig | nindent 2 }}
 
