--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -1,8 +1,9 @@
 # vim: set filetype=helm: 
 
+{{- $fullname := (include "postgresql-cluster.fullname" .) -}}
 {{- $serviceName := (include "postgresql-cluster.postgres.serviceName" .) -}}
 {{- $serviceDomain := (include "postgresql-cluster.postgres.serviceDomain" .) -}}
-{{- $masterHost := printf "%s-master-0.%s" .Release.Name $serviceDomain -}}
+{{- $masterHost := printf "%s-master-0.%s" $fullname $serviceDomain -}}
 
 {{- $numOfReplicas := (eq .Values.pgpool.loadBalance "sync" | ternary (int .Values.postgres.replicasToSync) (int .Values.postgres.replicas)) -}}
 
@@ -18,7 +19,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-pgpool
+  name: {{ $fullname }}-pgpool
   labels:
     {{- include "postgresql-cluster.labels" . | nindent 4 }}
 spec:
@@ -58,7 +59,7 @@ spec:
           defaultMode: 0640
       - name: scripts
         configMap:
-          name: {{ .Release.Name }}-scripts
+          name: {{ $fullname }}-scripts
           defaultMode: 0774
           items:
           - key: wait-for-host.sh
@@ -73,9 +74,9 @@ spec:
         - /opt/wait-for-host.sh
         - --timeout
         - '60'
-        - {{ printf "%s-master-0.%s" $.Release.Name $serviceDomain }}
+        - {{ $masterHost }}
         {{- range $i := (until $numOfReplicas) }}
-        - {{ printf "%s-standby-%d.%s" $.Release.Name $i $serviceDomain }}
+        - {{ printf "%s-standby-%d.%s" $fullname $i $serviceDomain }}
         {{- end }}{{/* range */}}
         volumeMounts:
         - name: scripts
@@ -107,7 +108,7 @@ spec:
         - name: LOAD_BALANCE
           value: '{{ .Values.pgpool.loadBalance | empty | ternary "off" "on" }}'
         - name: BACKEND_0_HOST
-          value: {{ printf "%s-master-0.%s" $.Release.Name $serviceDomain }}
+          value: {{ $masterHost }}
         - name: BACKEND_0_WEIGHT
           value: '1'
         - name: BACKEND_0_NAME
@@ -115,7 +116,7 @@ spec:
         {{- if .Values.pgpool.loadBalance }}
         {{- range $i := (until $numOfReplicas) }}
         - name: {{ printf "BACKEND_%d_HOST" ($i| add1) }}
-          value: {{ printf "%s-standby-%d.%s" $.Release.Name $i $serviceDomain }}
+          value: {{ printf "%s-standby-%d.%s" $fullname $i $serviceDomain }}
         - name: {{ printf "BACKEND_%d_WEIGHT" ($i| add1) }}
           value: '1'
         - name: {{ printf "BACKEND_%d_NAME" ($i| add1) }}
