--- a/templates/serviceaccount.yml
+++ b/templates/serviceaccount.yml
@@ -1,4 +1,6 @@
-{{- if .Values.serviceAccount.create -}}
+# vim: set filetype=helm: 
+
+{{ if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
