Fix typo in container name (psql)

--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -209,7 +209,7 @@ spec:
         - name: home
           mountPath: /var/lib/postgresql
       containers:
-      - name: curl
+      - name: psql
         image: {{ .Values.postgres.image }}
         env:
         - name: PGHOST
