--- a/files/config/pg_hba.conf
+++ b/files/config/pg_hba.conf
@@ -1,11 +1,14 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-local   all             postgres                                peer
-local   all             all                                     peer
-host    all             all             127.0.0.1/32            md5
-host    all             all             ::1/128                 md5
-local   replication     postgres                                peer
-host    replication     postgres        127.0.0.1/32            md5
-host    replication     postgres        ::1/128                 md5
-hostssl replication     all             all                     md5
-host    all             all             127.0.0.1/8             md5
-hostssl all             all             all                     md5 
+
+local   all             all                                     trust
+# IPv4 local connections:
+host    all             all             127.0.0.1/32            trust
+# IPv6 local connections:
+host    all             all             ::1/128                 trust
+# Allow replication connections from localhost, by a user with the replication privilege.
+local   replication     all                                     trust
+host    replication     all             127.0.0.1/32            trust
+host    replication     all             ::1/128                 trust
+# Authenticate with SCRAM for all others
+host    replication     all             all                     scram-sha-256
+host 	all		 		all 			all 					scram-sha-256
